RESOLVED FIXED75686
[EFL] Fix page rendering issue on ewk_view_tiled.
https://bugs.webkit.org/show_bug.cgi?id=75686
Summary [EFL] Fix page rendering issue on ewk_view_tiled.
KwangHyuk
Reported 2012-01-05 22:55:10 PST
Created attachment 121402 [details] Simple test file. For the attached simple page, ewk_view_tiled doesn't seem to present rendered content correctly. This might be caused by the discard of backing store when page load is started. Unfortunately, The discard of backing store doesn't contain reset of content size which backing store knew.
Attachments
Simple test file. (58 bytes, text/html)
2012-01-05 22:55 PST, KwangHyuk
no flags
Propose a patch. (1.71 KB, patch)
2012-01-10 04:48 PST, KwangHyuk
no flags
Update ChangeLog. (1.71 KB, patch)
2012-01-10 06:25 PST, KwangHyuk
no flags
KwangHyuk
Comment 1 2012-01-10 04:48:59 PST
Created attachment 121827 [details] Propose a patch.
Raphael Kubo da Costa (:rakuco)
Comment 2 2012-01-10 05:36:01 PST
Comment on attachment 121827 [details] Propose a patch. View in context: https://bugs.webkit.org/attachment.cgi?id=121827&action=review > Source/WebKit/efl/ChangeLog:12 > + Therefore, ewk_tiled_backing_store doesn't present the attached test page properly. The test page is not being committed, so this part of the ChangeLog does not make much sense.
KwangHyuk
Comment 3 2012-01-10 05:39:20 PST
(In reply to comment #2) > (From update of attachment 121827 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=121827&action=review > > > Source/WebKit/efl/ChangeLog:12 > > + Therefore, ewk_tiled_backing_store doesn't present the attached test page properly. > > The test page is not being committed, so this part of the ChangeLog does not make much sense. make sense, I will update ChangeLog soon.
KwangHyuk
Comment 4 2012-01-10 06:25:08 PST
Created attachment 121839 [details] Update ChangeLog.
Raphael Kubo da Costa (:rakuco)
Comment 5 2012-01-10 06:59:51 PST
Looks OK.
WebKit Review Bot
Comment 6 2012-01-11 00:19:37 PST
Comment on attachment 121839 [details] Update ChangeLog. Clearing flags on attachment: 121839 Committed r104677: <http://trac.webkit.org/changeset/104677>
WebKit Review Bot
Comment 7 2012-01-11 00:19:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.